--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,6 @@
 /*
 * Stylesheet
-* Author: Mirko van der Waal;
+* Author: Mirko van der Waal (CSS God);
 */
 
 @import url(http://fonts.googleapis.com/css?family=Lato:400,100,300);
@@ -20,6 +20,7 @@ body                {margin:0;padding:0;font-family: 'Tahoma', 'sans-serif';
 
 .clear-both         {clear:both;}
 a                   {color:inherit;text-decoration:inherit;}
+input               {outline:none;}
 
                     /*
                     ICON_COLOR: #F2F2F2;
@@ -36,14 +37,14 @@ body                {display: -webkit-box;
                     /* FLEX2  */
 nav                 {-webkit-flex:2;
                              flex:2;
-                    float:left;background:#821031;color:#F2F2F2;transition:flex .3s ;}
+                    float:left;background:#821031;color:#F2F2F2;transition:flex .3s ;overflow:none;}
 nav:hover           {-webkit-flex:3;
                              flex:3;} 
 
 nav a div           {display: -webkit-box;
                      display: -webkit-flex;
                      display: flex;
-                    height:20vh;-webkit-align-items: center;align-items: center;
+                    height:20%;-webkit-align-items: center;align-items: center;
                     justify-content: center;-webkit-justify-content: center;font-size:2em;
                     transition:background .3s, color .3s;}
 nav a div:hover     {background:#F2F2F2;color:#821031;}
@@ -58,30 +59,20 @@ main                {-webkit-flex:22;
 header                  {width:300px;margin:20 auto 50 auto}
 header h1               {font-family: 'Montserrat', sans-serif;text-align:center;font-size:385%;font-weight:100;border-bottom:5px solid #821031;}
 
-.checkbox-plus          {margin:40px 0px 40px 10px;font-size:150%;text-align:center;}
-.checkbox-plus i        {background:#821031;border-radius:50%;padding:7 14px;color:#F2F2F2;margin:;border:5px solid #821031;
-                        transition:background .3s, color .3s, border .3s;cursor:pointer;font-family: 'Montserrat', sans-serif;
-                        margin:0 10;}
-.checkbox-plus i:last-child{padding:0;padding:7 11px;}
-.checkbox-plus i:hover  {background:#F2F2F2;color:#821031;border:5px solid #821031;} 
+.checkbox-plus          {margin:40px 0px 40px 10px;font-size:200%;text-align:center;}
+.checkbox-plus i        {color:#821031;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 25;}
 
 .checkbox-title         {width:100%;float:left;text-align:center;margin-top:50px;}
 .checkbox-title input   {border:none;border-bottom:5px solid #821031;border-left:5px solid #821031;display:inline-table;
-                        font-weight:300;padding:7.5px;font-size:125%;width:15vw;font-family: 'Montserrat', sans-serif;}
+                        font-weight:300;padding:7.5px;font-size:125%;width:20vw;font-family: 'Montserrat', sans-serif;}
 
 .checkbox-input         {width:50%;float:left;margin:20 0px;text-align:center;}
 .checkbox-input input   {width:70px;border:0px;font-size:150%;font-weight:300;margin:0;border-bottom:5px solid #821031;
                         font-family: 'Montserrat', sans-serif;padding:10px;text-align:center;}
 .checkbox-input span    {font-size:250%;margin:0 5;}
 
-.checkbox-button        {width:50%;float:left;font-size:200%;margin:35 0px;text-align:center;}
-.checkbox-button i:first-child{background:none;border:none;text-align:center !important;color:#821031;font-size:100%;
-                                width:50px;display:inline-block;}
-.checkbox-button i:first-child:hover{border:none;background:none;color:none;}
-.checkbox-button i      {background:#821031;border-radius:50%;;padding:3 10px;color:#F2F2F2;margin-left:10px;border:5px solid #821031;
-                        transition:background .3s, color .3s, border .3s;cursor:pointer;}
-.checkbox-button i:hover{background:#F2F2F2;color:#821031;border:5px solid #821031;}
-
+.checkbox-button        {width:50%;float:left;font-size:250%;margin:35 0px;text-align:center;}
+.checkbox-button i      {color:#821031;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 15;}
 
 .settings               {width:100%;font-family: 'Montserrat', sans-serif;}
 .setting-color          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 25;}
@@ -100,6 +91,7 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
     .checkbox-plus      {margin-left:10px;}
     .checkbox-input,          
     .checkbox-button    {width:100%;}
+    .checkbox-button    {margin-top:0;}
 
     /* SETTINGS */
     .setting-color      {width:100%;}
