--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,7 @@
 /*
 * Stylesheet
 * Author: Mirko van der Waal (CSS God);
+* THE FUCK U USING FLEX MORE? I DONT UNDERSTAND SHIT
 */
 
 @import url(http://fonts.googleapis.com/css?family=Lato:400,100,300);
@@ -41,13 +42,16 @@ nav                 {-webkit-flex:2;
 nav:hover           {-webkit-flex:3;
                              flex:3;} 
 
-nav a div           {display: -webkit-box;
+nav a               {display: -webkit-box;
                      display: -webkit-flex;
                      display: flex;
                     height:20%;-webkit-align-items: center;align-items: center;
                     justify-content: center;-webkit-justify-content: center;font-size:2em;
                     transition:background .3s, color .3s;}
-nav a div:hover     {background:#F2F2F2;color:#821031;}
+nav a:hover,
+nav a.active        {background:#F2F2F2;color:#821031;}
+/* Add styling to make active better. Just temporary this */
+nav a.active        {border-left:10px solid #821031;}
 
                     /* FLEX22 */
 main                {-webkit-flex:22;
