--- a/app/style.css
+++ b/app/style.css
@@ -10,7 +10,7 @@
 /* Reset standard margins and apply standard fallback font + Background placement.*/
 html, 
 body                {margin:0;padding:0;font-family: 'Tahoma', 'sans-serif';
-                    vertical-align:baseline;line-height:1;background:#D7FAF3;}
+                    vertical-align:baseline;line-height:1;}
 
 /* Prevent padding to resize the element.*/
 *,
@@ -81,9 +81,9 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
     /* CORE RESPONSIVE */
     body                {}
     main                {padding:0;margin-top:65px;}
-    nav                 {display:block;position:fixed;width:100%;height:50px;bottom:0;}
+    nav                 {display:block;position:fixed;width:100%;bottom:0;}
     nav:hover           {width:100%;}
-    nav a               {height:50px;width:20%;float:left;}
+    nav a               {height:65px;width:20%;float:left;}
 
     /* TIMER */
     .checkbox-title input{width:60vw}
