--- a/app/style.css
+++ b/app/style.css
@@ -80,6 +80,8 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 
 input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
+.wrap                   {width:80%; margin:auto;}
+
 @media (max-width: 720px) {
     /* CORE RESPONSIVE */
     body                {}
