--- a/app/style.css
+++ b/app/style.css
@@ -1,7 +1,8 @@
+
 /*
 * Stylesheet
 * Author: Mirko van der Waal (CSS God);
-* THE FUCK U USING FLEX MORE? I DONT UNDERSTAND SHIT
+*         Terence Keur
 */
 
 @import url(http://fonts.googleapis.com/css?family=Lato:400,100,300);
@@ -17,7 +18,8 @@ body                {margin:0;padding:0;font-family: 'Tahoma', 'sans-serif';
 *:before,
 *:after             {-webkit-box-sizing: border-box;     
                         -moz-box-sizing: border-box; 
-                             box-sizing: border-box;}
+                             box-sizing: border-box;
+                    outline:none;}
 
 .clear-both         {clear:both;}
 a                   {color:inherit;text-decoration:inherit;}
@@ -25,7 +27,7 @@ input               {outline:none;}
 
                     /*
                     ICON_COLOR: #F2F2F2;
-                    BACKGROUND: #821031;
+                    BASECOLOR: #821031;
                     TEXT_COLOR: #191919;  
                     */
                     /* WIDTH: 100% */
@@ -80,7 +82,10 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 
 input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
-.wrap                   {width:80%; margin:auto;}
+.wrap                   {width:70%; margin:auto;}
+.wrap .group            {margin-bottom:50px; max-width:700px; margin:auto;}
+.wrap .group h2         {color:#821031;}
+.group p                {padding-left:10px; border-left:5px solid #821031;}
 
 @media (max-width: 720px) {
     /* CORE RESPONSIVE */
