--- a/app/style.css
+++ b/app/style.css
@@ -76,21 +76,24 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .checkbox-button i      {color:#821031;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 15;}
 
 .settings               {width:100%;font-family: 'Montserrat', sans-serif;padding-left:7.5%;}
-.setting-color          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 25;}
+.setting-color          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 7.5%;}
 .setting-color h2       {font-weight:300;}
 .setting-color input    {background:white;border:none;border-left:65px solid #821031;font-size:200%;padding:15;color:#666;width:100%;}
 
+.setting-general        {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 7.5%;}
+
+
 input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
-.home                   {width:70%; margin:auto;font-family: 'Montserrat', sans-serif;}
+.home                   {width:100%; margin:auto;font-family: 'Montserrat', sans-serif;padding:0 25;}
 .home .home-group       {margin-bottom:50px; max-width:700px; margin:auto;}
-.home .home-group h2    {color:#821031;font-size:200%;margin-top:75px;}
-.home .home-group p     {padding-left:10px; border-left:5px solid #821031;}
+.home .home-group h2    {font-size:200%;color:#821031;margin-top:60px;}
+.home .home-group p     {padding-left:10px; border-left:10px solid #821031;font-size:125%;}
 
 @media (max-width: 720px) {
     /* CORE RESPONSIVE */
     body                {}
-    main                {padding:0;margin-top:65px;}
+    main                {padding:0;margin-top:65px;margin-bottom:65px;}
     nav                 {display:block;position:fixed;width:100%;bottom:0;}
     nav:hover           {width:100%;}
     nav a               {height:65px;width:20%;float:left;}
@@ -104,5 +107,5 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
     /* SETTINGS */
     .settings           {padding:0;}
-    .setting-color      {width:100%;}
+    .setting-color      {width:100%;padding:0 25;}
 }
