--- a/app/style.css
+++ b/app/style.css
@@ -27,7 +27,7 @@ input               {outline:none;}
 
                     /*
                     ICON_COLOR: #F2F2F2;
-                    BASECOLOR: #821031;
+                    BASECOLOR:  #821031;
                     TEXT_COLOR: #191919;  
                     */
                     /* WIDTH: 100% */
@@ -53,6 +53,12 @@ nav a.active        {background:#F2F2F2;color:#821031;}
                     /* WIDTH: 100% */
 main                {width:   100%;
                     float:left;background:#F2F2F2;transition:width .3s;font-family: 'Lato', sans-serif;padding-left:100px;}
+
+.landing                {width:100%;background:#821031;height:100%;text-align:center;}
+.landing img            {margin-top:100px;width:85%;}
+.landing div            {font-family: 'Montserrat', sans-serif;text-align:center;margin-top:65px;}
+.landing div a          {letter-spacing:.5em;color:#fff;border:2.5px solid #fff;padding:20 50;transition:background .3s, color .3s;}
+.landing div a:hover    {color:#821031;background:#fff;}
 
 .shadowTimer            {display:none;}
 .checkboxes             {width:100%;font-family: 'Montserrat', sans-serif;}
@@ -97,6 +103,10 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
     nav                 {display:block;position:fixed;width:100%;bottom:0;}
     nav:hover           {width:100%;}
     nav a               {height:65px;width:20%;float:left;}
+    
+    /* LANDING */
+    .landing div a,
+    .landing div p      {width:100%;}
 
     /* TIMER */
     .checkbox-title input{width:60vw}
