--- a/app/style.css
+++ b/app/style.css
@@ -82,9 +82,17 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .checkbox-button i      {color:#821031;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 15;}
 
 .settings               {width:100%;font-family: 'Montserrat', sans-serif;padding-left:7.5%;}
-.setting-color          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 7.5%;}
+.settings h1            {margin:50 0 25 0;}
+
+.setting-color          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 5%;float:left;}
 .setting-color h2       {font-weight:300;}
-.setting-color input    {background:white;border:none;border-left:65px solid #821031;font-size:200%;padding:15;color:#666;width:100%;}
+.setting-color span     {width:15%;float:left;background:#545454;font-size:2em;padding: 15 0;
+                        text-align:center;color:white;font-weight:300;}
+.setting-color input    {width:70%;background:white;border:none;font-size:200%;padding:15;color:#666;float:left;}
+
+.setting-clock          {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 7.5%;float:left;}
+.setting-clock h2       {font-weight:300;}
+.setting-clock input    {background:white;border:none;font-size:200%;padding:15;color:#666;width:100%;}
 
 .setting-general        {width:50%;font-size:100%;font-family: 'Montserrat', sans-serif;text-align:center;padding:0 2.5% 0 7.5%;}
 
@@ -117,5 +125,8 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
     /* SETTINGS */
     .settings           {padding:0;}
-    .setting-color      {width:100%;padding:0 25;}
+    .setting-color,
+    .setting-clock      {width:100%;padding:0 25;}
+    .setting-color input{width:60%}
+    .setting-color span {width:20%;}
 }
