resetting colors added

--- a/app/style.css
+++ b/app/style.css
@@ -110,6 +110,8 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 .text_color_box         {background:#191919}
 .background_color_box   {background:#F2F2F2}
 
+.ion-refresh            {cursor:pointer}
+
 @media (max-width: 720px) {
     /* CORE RESPONSIVE */
     body                {}
