--- a/app/style.css
+++ b/app/style.css
@@ -76,7 +76,7 @@ main                {width:   100%;
 header                  {width:300px;margin:20 auto 50 auto}
 header h1               {font-family: 'Montserrat', sans-serif;text-align:center;font-size:385%;font-weight:100;border-bottom:5px solid #214E96;}
 
-.checkbox-overlay       {height:100%;width:100%;background:rgba(255, 255, 255, .5);position:absolute;left:0;top:0;}
+.checkbox-overlay       {display:none;height:100%;width:100%;background:rgba(255, 255, 255, .5);position:absolute;left:0;top:0;}
 .checkbox-texts         {text-align:center;padding:25vh 0 0 0;font-size:150%;text-shadow:0px 2px 0px white;}
 .checkbox-bool          {width:190px;margin:0 auto;}
 .checkbox-confirm       {text-align:center;background:transparent;padding:20 0;width:75px;color:#214E96;float:left;margin:0 10;
