--- a/app/style.css
+++ b/app/style.css
@@ -180,3 +180,57 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
     .setting-general    {width:100%;padding:0 25;}
     
 }
+
+*:-webkit-full-screen {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    top: 0;
+    padding-top:10%;
+}
+
+
+*:-webkit-full-screen .checkbox-button{
+    display:none;
+}
+
+*:-webkit-full-screen .checkbox-input{
+    width:100%;
+    line-height: 100%;
+}
+
+*:-webkit-full-screen .checkbox-input input{
+    font-size:20vh;
+    width:30%;
+}
+
+*:-webkit-full-screen input[disabled] {
+    background:#fff!important;
+}
+
+*:-moz-full-screen input[disabled] {
+    background:#fff!important;
+}
+
+*:-moz-full-screen {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    top: 0;
+    padding-top:10%;
+    background-color: rgba(255,255,255,1);
+}
+
+*:-moz-full-screen .checkbox-button{
+    display:none;
+}
+
+*:-moz-full-screen .checkbox-input{
+    width:100%;
+    line-height: 100%;
+}
+
+*:-moz-full-screen .checkbox-input input{
+    font-size:20vh;
+    width:30%;
+}
