--- a/app/style.css
+++ b/app/style.css
@@ -77,7 +77,7 @@ main                {width:   100%;
 header                  {width:300px;margin:20 auto 50 auto}
 header h1               {font-family: 'Montserrat', sans-serif;text-align:center;font-size:385%;font-weight:100;border-bottom:5px solid #214E96;}
 
-.checkbox-overlay       {display:none;height:100%;width:100%;background:rgba(255, 255, 255, .8);position:absolute;left:0;top:0;}
+.checkbox-overlay       {display:none;height:100%;width:100%;background:rgba(255, 255, 255, .8);position:fixed;left:0;top:0;}
 .checkbox-overlay.active{display:block;}
 .checkbox-texts         {text-align:center;padding:25vh 0 0 0;font-size:150%;text-shadow:0px 2px 0px white;}
 .checkbox-bool          {width:190px;margin:0 auto;}
@@ -145,7 +145,8 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .setting-general .h2bool  {width:60%;float:left;}
 .setting-general .bool    {width:20%;background:#214E96;text-align:center;float:left;line-height:3em;color:white;transition:background .2s, color .2s;}
 .bool:hover             {background:white;color:#214E96;cursor:pointer;}
-.bool:active            {background:white;color:#214E96;color:#191919}
+.bool:active,
+.bool.active            {background:white;color:#214E96;color:#191919}
 
 input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 
