--- a/app/style.css
+++ b/app/style.css
@@ -245,3 +245,15 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
     .setting-general    {width:100%;padding:0 25;}
 
 }
+
+
+
+
+.settings-overlay       {display:none;height:100%;width:100%;background:rgba(255, 255, 255, .8);position:fixed;left:0;top:0;}
+.settings-overlay.active{display:block;}
+.settings-texts         {text-align:center;padding:20px 0 0 0;font-size:150%;text-shadow:0px 2px 0px white;font-weight: bold;}
+.settings-bool          {margin:0 auto;display:table;}
+.settings-bool > div    {text-align:center;background:#fff;padding:20 0;width:100px;color:#214E96;float:left;margin:0 10;
+                        border:3px solid #214E96;font-size:125%;font-family: 'Montserrat', sans-serif;
+                        transition:background .3s, color .3s;cursor:pointer;}
+.settings-bool > div:hover  {background:#214E96;color:white;}
